--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.10.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
