--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2"
   }
